<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewCrowdTranslator</string>
    <string name="action_settings">Settings</string>
    <string name="explanation_portuguese">Gostaríamos da sua ajuda em um breve experimento:        
        \n\nPrimeiramente, informe seu nível de proficiência na Lingua Inglesa. 
        \n\nEm seguida, você deverá traduzir 5 frases do Português para o Inglês.
        \n\nAperte Next para ENVIAR ou PULAR uma expressão.</string>
    <string name="explanation_english">We need your help on a quick experiment:  
        \n\nFirst, inform your English proficiency. 
        \n\nThen, you must translate 5 sentences from Portuguese to English.
        \n\nPress Next to SEND or to SKIP an expression. </string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="portuguese_sentence">Portuguese sentence:</string>
    <string name="english_translation">English translation:</string>
    <string name="thanks">Thank you!!!</string>
    <string name="select_level">Please select your English proficiency:</string>
    <string name="title_activity_level">Select proficiency</string>
    <string name="title_activity_survey">Translate</string>
    <string name="editEnglish_hint">Type the best translation here</string>
    <string name="title_activity_thanks">Thank you</string>
    <string name="close">Close</string>
    <string name="title_section0">All jobs</string>
    <string name="title_section1">Recommended Jobs</string>
    <string name="title_activity_settings">SettingsActivity</string>
    
    <string name="title_firstname">First Name</string>
    <string name="default_firstname">Enter your first name</string>
    <string name="dialog_title_firstname">Enter your first name</string>
    
    <string name="title_lastname">Lastname</string>
    <string name="default_lastname">Enter your lastname</string>
    <string name="dialog_title_lastname">Enter your lastname</string>
    
    <string name="title_email">Email</string>
    <string name="default_email">Enter your email</string>
    <string name="dialog_title_email">Enter your email</string>
    
    <string name="title_gender">Gender</string>
    <string name="default_gender">Enter your gender</string>
    <string name="dialog_title_gender">Enter your gender</string>
    <string name="default_value_gender">U</string>
    
    
    
    <string name="title_education">Education</string>
    <string name="default_education">Enter your education level</string>
    <string name="dialog_title_education">Enter your education level</string>
    
    <string name="title_income">Income</string>
    <string name="default_income">Enter your annual income</string>
    <string name="dialog_title_income">Enter your annual income</string>
    
    <string name="title_skill">English Proficiency</string>
    <string name="default_skill">Enter your english proficiency</string>
    <string name="dialog_title_skill">Enter your english proficiency</string>
    
    <string name="title_age">Age</string>
    <string name="default_age">Enter your age</string>
    <string name="dialog_title_age">Enter your age</string>
    
    <string name="empty_string"></string>
    <string name="invalid_email">Email is not valid</string>
    
    

</resources>